# agtop

./: .gitignore  LICENSE  README.md  pyproject.toml
agtop/: __init__.py  __main__.py  app.py  config.py  history.py  hooks.py  monitor.tcss  parser.py  providers.py  render.py  subagents.py  widgets.py
tests/: test_app_bindings.py  test_hooks.py
