[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agtop"
version = "0.1.0"
description = "TUI monitor for AI coding agents — Claude Code, Codex CLI and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "lhead" }]
keywords = ["agent", "claude", "codex", "tui", "monitor", "terminal"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.70.0",
]

[project.urls]
Homepage = "https://github.com/lhead/agtop"

[project.scripts]
agtop = "agtop.__main__:main"
